src/scss/ionic.app.scss
// The path for our ionicons font files, relative to the built CSS in www/css
$ionicons-font-path: "../lib/ionic/fonts" !default;

@font-face {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 100;
  src: local("Roboto Thin"), local("Roboto-Thin"), url(../img/Roboto-Thin.woff2) format("woff2"), url(../img/Roboto-Thin.ttf) format("truetype");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 300;
    src: local("Roboto Light"), local("Roboto-Light"), url(../img/Roboto-Light.woff2) format("woff2"), url(../img/Roboto-Light.ttf) format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: local("Roboto"), local("Roboto-Regular"), url(../img/Roboto-Regular.woff2) format("woff2"), url(../img/Roboto-Regular.ttf) format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
$font-family-base: "Roboto", sans-serif !default;

// Include all of Ionic
@import "www/lib/ionic/scss/ionic";

.link {
    color: #387ef5;
    text-decoration: underline;
    cursor: pointer;
}

textarea {
  background: none
}

.center {
  text-align: center;
  justify-content: center
}

.vertical-center .scroll, .vertical-center.scroll-content-false {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center
}

.scroll-content:not(.cancel-height) > .scroll, .full-height {
  height: 100%
}

.limit-width {
  max-width: 800px;
  margin: 0 auto
}

.ui-disabled {
  opacity: .3;
  zoom: 1;
  cursor: default !important;
  pointer-events: none;
}

.white {
  color: #fff !important
}

.bar-footer button {
  font-size: larger !important
}

#login {
  background: #1c2627 url("../img/login_bg.jpg") no-repeat center center;
  background-size: cover;

  .login-content {
    max-width: 400px;
    margin: 0 auto
  }

  .scroll-content {
    display: table !important;
    width: 100% !important;
    height: 100% !important;

    form {
      display: table-cell;
      vertical-align: middle;

      .header {
        padding-bottom: 20px;

        img {
          display: block;
          width: 80%;
          margin: 0 auto;
        }
      }

      .button.button-light.active, .button.button-light.activated {
        color: #fff;
        opacity: inherit;
      }
    }
  }
}

.thumb-container,
.thumb-container img {
  height: 100%;
  left: 10px;
  max-height: 80px;
  max-width: 80px;
  position: absolute;
  top: 10px;
  width: 100%;
}
.thumb-container img {
  left: 0;
  top: 0;
}
.thumb-container .corner-ribbon {
  bottom: -10px;
}
.corner-ribbon {
  border-top: 45px solid transparent;
  border-left: 45px solid transparent;
  border-bottom: 45px solid rgba(0,0,0,0.60);
  bottom: 0;
  height: 45px;
  position: absolute;
  right: 0;
  width: 45px;
}
.corner-ribbon .icon {
  color: rgba(255, 255, 255, 0.90);
  font-size: 23px;
  position: absolute;
  right: 5px;
  top: 20px;
}

ui-cropper{
  width:100%;
  height:100%;
  display:block;
  position:relative;
  overflow:hidden;
  background-color: #333
}
ui-cropper canvas{
  display:block;
  position:absolute;
  top:50%;
  left:50%;
  outline:0;
  -webkit-tap-highlight-color:rgba(255,255,255,0)
}
ui-cropper .loading{
  width:100%;
  height:100%;
  font-size:16px;
  font-weight:700;
  display:flex;
  align-items:center;
  justify-content:center;
  color:#fff;
  background-color:rgba(0,0,0,.75);
  position:absolute
}

.sync-bar {
  background-color:#f5f5f5
}

.background {
  width: 100%;
  height: 100%;
  position: absolute;
  background-repeat: no-repeat;
  background-size: cover;
  filter: blur(5px);
  opacity: 0.7
}

.door-button {
  background-color: #444;
  color: #fff;
  border-radius: 100px;
  font-size: 3em;
  font-weight: 100;
  height: 200px;
  line-height: 200px;
  margin: auto;
  position: relative;
  text-align: center;
  width: 200px;
  display: block
}

.round-button {
  border-radius: 100px;
  height: 31px;
  width: 31px;
}

.settings {
  input {
    text-align: end
  }
}

.geo-rule-setup {
  height: 100%;

  .map-container {
    height: calc(100% - 228px)
  }
  .map {
    height: 100%;
    width: 100%;
  }
}

